<Jake> Ensure app remains central on desktop but fills screen on narrow screens

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   height: 100px;
   width: 100%;
 
-  z-index: 2;
+  z-index: 3;
 
   display: flex;
   align-items: center;
@@ -20,21 +20,37 @@
 }
 
 .logo {
-  background-color: #333444;
-  height: 100px;
-  width: 300px;
+  background-color: #444333;
+  height: 50px;
+  width: 100px;
 }
 
-.body {
-  background-color: #444;
-  width: 300px;
-  min-height: 100vh;
+@media screen and (max-width: 1000px) {
+  .body {
+    background-color: #444;
+    width: 100%;
+    min-height: 100vh;
 
-  z-index: 1;
+    z-index: 1;
 
-  margin-top: -100px;
-  margin-bottom: -100px;
+    margin-top: -100px;
+    margin-bottom: -100px;
 
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .body {
+    background-color: #444;
+    width: 1000px;
+    min-height: 100vh;
+
+    z-index: 1;
+
+    margin-top: -100px;
+    margin-bottom: -100px;
+
+  }
 }
 
 .cardContainer {
@@ -53,8 +69,8 @@
 
 .card {
   background-color: #333444;
-  height: 100px;
-  width: 300px;
+  height: 150px;
+  width: 100%;
 
   margin: 10px;
 }
